--- a/assets/data/bopeebo/bopeebo-easy.json
+++ b/assets/data/bopeebo/bopeebo-easy.json
@@ -2542,9 +2542,9 @@
 				"mustHitSection": true
 			}
 		],
-		"player2": "guy",
+		"player2": "dad",
 		"player3": null,
-		"song": "guy",
+		"song": "bopeebo",
 		"stage": "guystage",
 		"needsVoices": true,
 		"validScore": true,
